methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:7: error: not found: value vuvert
        vuvert=true
        ^